--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <div class="nav-links">
                 <a href="#features">Características</a>
                 <a href="#updates">Actualizaciones</a>
-                <a href="https://github.com/Dancenot0/nebula-preview.git" target="_blank" class="github-link">
+                <a href="https://github.com/Dancenot0/Nebula-browser" target="_blank" class="github-link">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
                     <span id="github-stars">...</span>
                 </a>
-                <a href="#" class="btn-sm">Descargar</a>
+                <a href="https://github.com/Dancenot0/Nebula-browser/releases/latest" class="btn-sm">Descargar</a>
             </div>
         </div>
     </nav>
@@ -31,7 +31,7 @@
                 <h1 class="fade-in">Nebula: El espacio donde tu web fluye.</h1>
                 <p class="subtitle fade-in">Un navegador ligero, privado y diseñado para la era moderna.</p>
                 <div class="cta-group fade-in">
-                    <a href="#" class="btn-primary">Descargar Nebula para Windows</a>
+                    <a href="https://github.com/Dancenot0/Nebula-browser/releases/latest" class="btn-primary">Descargar Nebula para Windows</a>
                     <p class="version-info">Versión 1.0.0 | Gratis y Open Source</p>
                 </div>
                 <div class="hero-visual fade-in">
@@ -95,7 +95,7 @@
                 <div class="glass feedback-card">
                     <h3>¿Encontraste un bug?</h3>
                     <p>Ayúdanos a mejorar Nebula reportando cualquier error o sugiriendo nuevas funciones.</p>
-                    <a href="https://github.com/Dancenot0/nebula-preview.git" target="_blank" class="btn-outline">Reportar en GitHub</a>
+                    <a href="https://github.com/Dancenot0/Nebula-browser/issues" target="_blank" class="btn-outline">Reportar en GitHub</a>
                 </div>
             </div>
         </section>
